[tool.poetry]
name = "ragnarok-expedition-pet"
version = "0.1.0"
description = "A simple service that provides the best combination for your pet's gene."
authors = ["Takuro Huang <takuro1026@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ragnarok_expedition_pet"}]

[tool.poetry.dependencies]
python = "3.9.15"
pynecone = "^0.1.24"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
